# efp_MLMM

./: CMakeLists.txt  Makefile  README.md  new_README  setup.sh  torch.sh
efpmd/: CMakeLists.txt
efpmd/libopt/: opt.c
efpmd/src/: common.c  common.h  common.h_skp  energy.c  energy.c_orig  ls_common.c  ls_main.c  ls_opt.c  ls_torch.h  main.c  main.c_og  og_common.c  og_energy.c  og_opt.c  og_torch.c  og_torch.h  opt.c  opt.c_og  opt.c_orig  parse.c  state.h  torch.c  torch.c_orig  torch.h
efpmd/torch/: .nfs000000006821076b00005d36  .nfs000000006821078d00005d33  .nfs000000006c710da400005d1d  .nfs000000006c710db900005d1c  .nfs000000006c710f7900005d1f  .nfs000000006c710fa000005d20  .nfs000000006ecc67fb0000742e  .nfs000000006f3678bf0000744d  .nfs000000006f36794c00007442  .nfs000000006f3679580000742c  .nfs000000006f36798600007449  .nfs000000006f3679ae00007447  .nfs000000006f367a310000745b  ANIModel.h  Makefile  blah  c_libtorch.cc  c_libtorch.h  cmrun.sh  torch.sh
efpmd/torch_og/: torch.c  torch.h
og_efpmd/: CMakeLists.txt
og_efpmd/libopt/: opt.c
og_efpmd/src/: Makefile  common.h  efield.c  energy.c_og  energy.c_og2  ls_common.h  ls_energy.c  ls_torch.c  main.c  og_common.h  og_energy.c  og_main.c  og_opt.c  torch.c  torch.h
og_efpmd/torch/: ANIModel.h  CMakeLists.txt  c_libtorch.cc
src/: efp.c  efp.h  efp.h_orig  elec.c  og_efp.c  og_pol.c  parse.c  pol.c
tests/: auto2_mm_1  auto_mm_1  back_mm_1  deb1  gtest_elpot.out2  hmm  opt_2.in  out1  out2  t.in  torch_1.in  torch_2.in  torch_efp_1.in  torch_efp_2.in  torch_efp_3.in  torch_efp_4.in  torch_efp_base.in  torch_elpot_1.in  torch_elpot_2.in  torch_mm_0.in  torch_mm_1.in  torch_mm_2.in  torch_mm_3.in  torch_mm_3_gtest.in  torch_mm_4.in  torch_tst.in  torch_w3b1-1.in  torch_w6b1-1.in
tests/torch_tests/: torch_base.in  torch_efp_1.in  torch_efp_base.in  torch_elpot_1.in  torch_mm_0.in  torch_mm_1.in  torch_mm_2.in  torch_mm_4.in
